// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput matches the snapshot (Disabled) 1`] = `
.c11 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c11::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c11::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c9 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 24px;
  padding: 1px var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c9[data-popper-placement*="bottom"] > .c10 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c9[data-popper-placement*="bottom"] > .c10::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c9[data-popper-placement*="bottom"] > .c10::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c9[data-popper-placement*="top"] > .c10 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c9[data-popper-placement*="top"] > .c10::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c9[data-popper-placement*="top"] > .c10::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c9[data-popper-placement*="right"] > .c10 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c9[data-popper-placement*="right"] > .c10::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c9[data-popper-placement*="right"] > .c10::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c9[data-popper-placement*="left"] > .c10 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c9[data-popper-placement*="left"] > .c10::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c9[data-popper-placement*="left"] > .c10::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c5:not(:disabled) {
  cursor: pointer;
}

.c5 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: #DBDEE1;
  color: #000000;
}

.c6:disabled {
  background-color: transparent;
  color: #B7BBC2;
}

.c6:focus {
  background-color: #FFFFFF;
  border-color: #006296;
  color: #60666E;
}

.c6 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
}

.c3::-moz-placeholder {
  color: #60666E;
}

.c3:-ms-input-placeholder {
  color: #60666E;
}

.c3::placeholder {
  color: #60666E;
}

.c3:disabled {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
}

.c3:disabled,
.c3:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::placeholder {
  color: #B7BBC2;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0;
}

.c2 input {
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  border-right-width: 0;
}

.c2 input::-ms-reveal {
  display: none;
}

.c8 {
  background-color: #FFFFFF;
  border-color: #60666E;
  border-left-width: 0;
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  min-height: 2rem;
  width: 2rem;
}

.c8:disabled {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1:focus-within {
  border-radius: var(--border-radius);
}

.c1:focus-within {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1:focus-within input,
.c1:focus-within .c7 {
  border-color: #006296;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c0 c2"
      data-testid="field-container"
    >
      <input
        aria-invalid="false"
        autocomplete="current-password"
        class="c3"
        data-testid="password-input"
        disabled=""
        name="password"
        type="password"
        value="Pass123"
      />
    </div>
    <span
      class="c4"
      data-testid="tooltip"
      id="tooltip-trigger-undefined"
      tabindex="-1"
    >
      <button
        aria-label="Show password in plain text."
        aria-pressed="false"
        class="c5 c6 c7 c8"
        data-testid="show-password-button"
        disabled=""
        type="button"
      >
        <svg
          aria-hidden="true"
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </span>
    <div
      aria-hidden="true"
      class="c9"
      data-popper-interactive="false"
      data-testid="tooltip-content-container"
      role="tooltip"
      style="position:absolute;left:0;top:0"
    >
      <div
        class="c10 c11"
        data-popper-arrow="true"
        style="position:absolute"
      />
      Show password in plain text.
    </div>
  </div>
</div>
`;

exports[`PasswordInput matches the snapshot (Invalid) 1`] = `
.c1 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c3 {
  margin-left: var(--spacing-base);
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c15 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c15::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c15::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c13 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 24px;
  padding: 1px var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c13[data-popper-placement*="bottom"] > .c14 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c13[data-popper-placement*="bottom"] > .c14::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c13[data-popper-placement*="bottom"] > .c14::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c13[data-popper-placement*="top"] > .c14 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c13[data-popper-placement*="top"] > .c14::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c13[data-popper-placement*="top"] > .c14::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c13[data-popper-placement*="right"] > .c14 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c13[data-popper-placement*="right"] > .c14::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c13[data-popper-placement*="right"] > .c14::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c13[data-popper-placement*="left"] > .c14 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c13[data-popper-placement*="left"] > .c14::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c13[data-popper-placement*="left"] > .c14::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c8 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c8:focus {
  outline: none;
}

.c8:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0:focus {
  border-color: #CD2C23;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-half);
}

.c5 {
  margin: 0 0 var(--spacing-3x);
}

.c5 input,
.c5 select,
.c5 textarea {
  border-color: #60666E;
}

.c5:focus {
  border-color: #006296;
}

.c5 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c9:focus {
  outline: none;
}

.c9:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c9:not(:disabled) {
  cursor: pointer;
}

.c9 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c10 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c10:focus {
  outline: none;
}

.c10:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c10:hover,
.c10[aria-expanded='true'] {
  background-color: #DBDEE1;
  color: #000000;
}

.c10:disabled {
  background-color: transparent;
  color: #B7BBC2;
}

.c10:focus {
  background-color: #FFFFFF;
  border-color: #006296;
  color: #60666E;
}

.c10 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c7 {
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
}

.c7:focus {
  outline: none;
}

.c7:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c7::-webkit-input-placeholder {
  color: #60666E;
}

.c7::-moz-placeholder {
  color: #60666E;
}

.c7:-ms-input-placeholder {
  color: #60666E;
}

.c7::placeholder {
  color: #60666E;
}

.c7:disabled {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
}

.c7:disabled,
.c7:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c7:disabled,
.c7:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c7:disabled,
.c7:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c7:disabled,
.c7:disabled::placeholder {
  color: #B7BBC2;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0;
}

.c6 input {
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  border-right-width: 0;
}

.c6 input::-ms-reveal {
  display: none;
}

.c12 {
  background-color: #FFFFFF;
  border-color: #60666E;
  border-left-width: 0;
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  min-height: 2rem;
  width: 2rem;
  border-color: #CD2C23;
}

.c12:disabled {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4:focus-within {
  border-radius: var(--border-radius);
}

.c4:focus-within {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c4:focus-within input,
.c4:focus-within .c11 {
  border-color: #006296;
}

<div
  class="c0"
>
  <div
    aria-live="polite"
    class="c1"
    id="undefined_invalid"
    role="alert"
  >
    <div
      class="c2"
    >
      <svg
        color="currentColor"
        focusable="false"
        height="16"
        width="16"
      />
    </div>
    <span
      class="c3"
    >
      This is an error message
    </span>
  </div>
  <div
    class="c4"
  >
    <div
      class="c5 c6"
      data-testid="field-container"
    >
      <input
        aria-invalid="true"
        autocomplete="current-password"
        class="c7"
        data-testid="password-input"
        name="password"
        type="password"
        value="Pass123"
      />
    </div>
    <span
      class="c8"
      data-testid="tooltip"
      id="tooltip-trigger-undefined"
      tabindex="-1"
    >
      <button
        aria-label="Show password in plain text."
        aria-pressed="false"
        class="c9 c10 c11 c12"
        data-testid="show-password-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </span>
    <div
      aria-hidden="true"
      class="c13"
      data-popper-interactive="false"
      data-testid="tooltip-content-container"
      role="tooltip"
      style="position:absolute;left:0;top:0"
    >
      <div
        class="c14 c15"
        data-popper-arrow="true"
        style="position:absolute"
      />
      Show password in plain text.
    </div>
  </div>
</div>
`;

exports[`PasswordInput matches the snapshot (Normal) 1`] = `
.c11 {
  height: 1.25rem;
  position: absolute;
  width: 1rem;
}

.c11::before {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  width: 0;
}

.c11::after {
  border-style: solid;
  content: '';
  display: block;
  height: 0;
  margin: auto;
  position: absolute;
  width: 0;
}

.c9 {
  background-color: #60666E;
  border: 1px solid #FFFFFF;
  border-radius: var(--border-radius-half);
  box-shadow: 0 10px 20px 0 rgb(0 0 0 / 19%);
  box-sizing: border-box;
  color: #FFFFFF;
  display: none;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 0.75rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1.25rem;
  margin: 0;
  max-width: 327px;
  min-height: 24px;
  padding: 1px var(--spacing-1x);
  -webkit-transition: opacity 300ms;
  transition: opacity 300ms;
  z-index: 1000;
}

.c9[data-popper-placement*="bottom"] > .c10 {
  height: 1rem;
  left: 0;
  margin-top: -0.375rem;
  top: 0;
  width: 1rem;
}

.c9[data-popper-placement*="bottom"] > .c10::before {
  border-color: transparent transparent #FFFFFF transparent;
  border-width: 0 0.5rem 0.5rem;
  position: absolute;
  top: -2px;
}

.c9[data-popper-placement*="bottom"] > .c10::after {
  border-color: transparent transparent #60666E transparent;
  border-width: 0 0.5rem 0.5rem;
}

.c9[data-popper-placement*="top"] > .c10 {
  bottom: 0;
  height: 0;
  left: 0;
  margin-bottom: 0;
  width: 1rem;
}

.c9[data-popper-placement*="top"] > .c10::before {
  border-color: #FFFFFF transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  position: absolute;
  top: 0;
}

.c9[data-popper-placement*="top"] > .c10::after {
  border-color: #60666E transparent transparent transparent;
  border-width: 0.5rem 0.5rem 0;
  top: -0.1rem;
}

.c9[data-popper-placement*="right"] > .c10 {
  height: 1rem;
  left: 0;
  margin-left: -0.8rem;
  width: 1rem;
}

.c9[data-popper-placement*="right"] > .c10::before {
  border-color: transparent #FFFFFF transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
}

.c9[data-popper-placement*="right"] > .c10::after {
  border-color: transparent #60666E transparent transparent;
  border-width: 0.5rem 0.5rem 0.5rem 0;
  left: 0.375rem;
  top: 0;
}

.c9[data-popper-placement*="left"] > .c10 {
  height: 1rem;
  margin-right: -0.7rem;
  right: -1px;
  width: 1rem;
}

.c9[data-popper-placement*="left"] > .c10::before {
  border-color: transparent transparent transparent #FFFFFF;
  border-width: 0.5rem 0 0.5rem 0.5rem;
}

.c9[data-popper-placement*="left"] > .c10::after {
  border-color: transparent transparent transparent #60666E;
  border-width: 0.5rem 0 0.5rem 0.5rem;
  left: 0.17rem;
  top: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c4:focus {
  outline: none;
}

.c4:focus {
  outline: none;
  box-shadow: 0 0 0 2px #84C6EA;
  box-shadow: 0 0 0 1px #006296,0 0 0 3px #84C6EA;
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0:focus {
  border-color: #006296;
}

.c0 > :nth-child(0) {
  margin-bottom: var(--spacing-half);
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: inherit;
  border: 1px solid;
  border-radius: 1.5rem;
  box-sizing: border-box;
  color: inherit;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  font-family: inherit;
  font-size: 0.75rem;
  font-weight: var(--font-bold);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-letter-spacing: 0.025rem;
  -moz-letter-spacing: 0.025rem;
  -ms-letter-spacing: 0.025rem;
  letter-spacing: 0.025rem;
  line-height: 1rem;
  min-height: var(--size-2x);
  min-width: 2rem;
  outline: none;
  padding: 0 var(--spacing-2x);
  text-transform: uppercase;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c5:focus {
  outline: none;
}

.c5:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c5:not(:disabled) {
  cursor: pointer;
}

.c5 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6 {
  background-color: transparent;
  border-color: transparent;
  color: #60666E;
  padding: 0;
  width: var(--size-2x);
}

.c6:focus {
  outline: none;
}

.c6:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c6:hover,
.c6[aria-expanded='true'] {
  background-color: #DBDEE1;
  color: #000000;
}

.c6:disabled {
  background-color: transparent;
  color: #B7BBC2;
}

.c6:focus {
  background-color: #FFFFFF;
  border-color: #006296;
  color: #60666E;
}

.c6 > svg {
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  background: #FFFFFF;
  border: 1px solid #60666E;
  border-radius: var(--border-radius);
  box-sizing: border-box;
  color: #000000;
  font-family: inherit;
  font-size: 0.875rem;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  min-height: var(--size-2x);
  outline: none;
  padding: 0 var(--spacing-1x);
  width: 100%;
}

.c3:focus {
  outline: none;
}

.c3:focus {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c3::-webkit-input-placeholder {
  color: #60666E;
}

.c3::-moz-placeholder {
  color: #60666E;
}

.c3:-ms-input-placeholder {
  color: #60666E;
}

.c3::placeholder {
  color: #60666E;
}

.c3:disabled {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
}

.c3:disabled,
.c3:disabled::-webkit-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::-moz-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled:-ms-input-placeholder {
  color: #B7BBC2;
}

.c3:disabled,
.c3:disabled::placeholder {
  color: #B7BBC2;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 0;
}

.c2 input {
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  border-right-width: 0;
}

.c2 input::-ms-reveal {
  display: none;
}

.c8 {
  background-color: #FFFFFF;
  border-color: #60666E;
  border-left-width: 0;
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  min-height: 2rem;
  width: 2rem;
}

.c8:disabled {
  background-color: #F1F2F2;
  border-color: #DBDEE1;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c1:focus-within {
  border-radius: var(--border-radius);
}

.c1:focus-within {
  outline: none;
  border-color: #006296;
  box-shadow: 0 0 0 2px #84C6EA;
}

.c1:focus-within input,
.c1:focus-within .c7 {
  border-color: #006296;
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c0 c2"
      data-testid="field-container"
    >
      <input
        aria-invalid="false"
        autocomplete="current-password"
        class="c3"
        data-testid="password-input"
        name="password"
        type="password"
        value="Pass123"
      />
    </div>
    <span
      class="c4"
      data-testid="tooltip"
      id="tooltip-trigger-undefined"
      tabindex="-1"
    >
      <button
        aria-label="Show password in plain text."
        aria-pressed="false"
        class="c5 c6 c7 c8"
        data-testid="show-password-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          color="currentColor"
          focusable="false"
          height="16"
          width="16"
        />
      </button>
    </span>
    <div
      aria-hidden="true"
      class="c9"
      data-popper-interactive="false"
      data-testid="tooltip-content-container"
      role="tooltip"
      style="position:absolute;left:0;top:0"
    >
      <div
        class="c10 c11"
        data-popper-arrow="true"
        style="position:absolute"
      />
      Show password in plain text.
    </div>
  </div>
</div>
`;
